Publish libsass C API tests

--- a/005/mem-import.1
+++ b/005/mem-import.1
@@ -3,11 +3,11 @@
 .Os
 .Sh NAME
 .Nm mem-import
-.Nd Test libsass memory handling
+.Nd Test libsass custom importer
 .Sh SYNOPSIS
 .Nm
 .Sh DESCRIPTION
-This utility tests how C++ Sass library
-works with user-supplied data.
+A custom importer is called twice
+with different arguments.
 .Sh AUTHOR
 Marcin Cieslak <saper@saper.info>
