--- a/004/mem-leaks.1
+++ b/004/mem-leaks.1
@@ -1,13 +1,15 @@
 .Dd July 21, 2015
-.Dt sass-crash-test 1
+.Dt mem-leaks 1
 .Os
 .Sh NAME
-.Nm sass-crash-test
+.Nm mem-leaks
 .Nd Test libsass memory handling
 .Sh SYNOPSIS
 .Nm
 .Sh DESCRIPTION
-This utility tests how C++ Sass library
-works with user-supplied data.
+This utility tests for possible memory
+leaks in the C++ Sass library
+.Sh BUGS
+This test is not yet written.
 .Sh AUTHOR
 Marcin Cieslak <saper@saper.info>
